--- a/src/app/components/menu-bar/menu-bar.component.html
+++ b/src/app/components/menu-bar/menu-bar.component.html
@@ -1,7 +1,7 @@
 <div class="container__menu-bar">
     <ul>
-        <li><a href="#">Prêmio de inovação</a></li>
-        <li><a href="#">Prêmio de abelinha do mês </a></li>
-        <li><a href="#">Destaque do mês</a></li>
+        <li><a href="#">Destaque do mês 🏆</a></li>
+        <li><a href="#">Prêmio de abelinha do mês 🐝 </a></li>
+        <li><a href="#">Prêmio de inovação 💡 </a></li>
     </ul>
 </div>
