--- a/src/app/components/menu-bar/menu-bar.component.scss
+++ b/src/app/components/menu-bar/menu-bar.component.scss
@@ -4,8 +4,10 @@
         flex-direction: row;
     }
     li{
-        padding: 15px ;
-        padding-bottom: 0;
+        
+        padding-top: 25px ;
+        padding-left: 45px ;
+        padding-bottom: 10px;
         list-style: none;
     }
 }
