--- a/src/app/components/small-card/small-card.component.scss
+++ b/src/app/components/small-card/small-card.component.scss
@@ -1,13 +1,13 @@
 .container__small-card {
-    width: 100%;
-    height: 300px;
-    min-width: 700px;
-
+    width: 750px;
     display: flex;
     flex-direction: row;
-    
-    padding-bottom: 25px;
-    margin-bottom: 7px;
+    align-items: stretch;
+
+    margin-bottom: 9px;
+    padding-bottom: 9px;
+    margin-right: 150px;
+    margin-left: 100px;
 
     border-bottom: rgb(55, 55, 55) solid 1px;
 }
@@ -20,28 +20,35 @@
 .small-card__picture {
     img {
         width: 300px;
-        min-height: 80%;
-      
+        min-height: 50%;
+
     }
 }
 
-.small-card__title {
-    display: flex;
-    flex-direction: row;
-    justify-content: start;
+.small-card__content {
+    h2 {
+        display: flex;
+        flex-direction: row;
+        justify-content: start;
 
-    width: 100%;
-    font-size: 7px;
-    padding: 7px;
-    margin-top: 5px;
+        font-size: 20px;
+        padding: 7px;
+        margin-top: 5px;
 
-    color: #515557 !important;
+        color: rgb(224, 215, 215) !important; 
+    }
+    
+    p{
+        display: flex;
+        flex-direction: row;
+        align-items: flex-start;
+        
+        padding: 7px;
+        margin-top: 7px;
+        
+        font-size: 14px;
+        color: #969fa3 !important;
+    }
+
 }
 
-.small-card__description {
-    display: flex;
-    flex-direction: row;
-    font-size: 13px;
-    padding: 7px;
-    color: white !important;
-}
