--- a/src/app/components/big-card/big-card.component.html
+++ b/src/app/components/big-card/big-card.component.html
@@ -1,18 +1,17 @@
 <div class="container__big-card">
-    <div class="big-card__picture">
-        <img src={{photoCover}}
-            alt="" width="100%" height="250px">
-    </div>
 
-    <div class="big-card__title">
-        <a href="#">
-            <h2>{{cardTitle}}</h2>
-        </a>
-    </div>
+<div class="big-card__title">
+    <a href="#">
+        <h2>{{cardTitle}}</h2>
+    </a>
+</div>
 
     <div class="big-card__description">
     <a href="#">
-        <p>{{cardDescription}}</p>
+        <p>Prêmio de inovação 💡- O Prêmio de Inovação do Mês celebra o brilhantismo e criatividade de um membro da equipe que se destacou ao trazer ideias frescas e soluções inovadoras para nossa empresa. Sua capacidade de pensar fora da caixa e impulsionar o progresso é um exemplo inspirador para todos nós.</p>
+        <p>Prêmio de abelhinha do mês 🐝 - Prêmio de abelhinha do mês homenageia um indivíduo excepcional que promove uma cultura empresarial de colaboração e inovação, atuando como um elo vital para a equipe. Seu comprometimento em unir talentos e inspirar resultados é fundamental para o sucesso da organização, tornando-o digno deste reconhecimento.</p>
+        <p>Destaque do mês 🏆-  O Prêmio de Destaque do Mês reconhece um colaborador notável que se destacou em sua dedicação, desempenho excepcional e contribuições significativas à empresa. Seu comprometimento exemplar e impacto positivo o destacam como um modelo a ser seguido por todos na organização.</p>
+
         </a>
     </div>
 </div>
