--- a/src/app/components/small-card/small-card.component.html
+++ b/src/app/components/small-card/small-card.component.html
@@ -8,7 +8,8 @@
         <a href="#">
             <h2> {{cardTitleSmallCard}}</h2>
         </a>
-        <a>
+        
+        <a href="#">
             <p>
                 {{cardDescriptionSmallCard}}
             </p>
