--- a/src/app/components/menu-bar/menu-bar.component.scss
+++ b/src/app/components/menu-bar/menu-bar.component.scss
@@ -5,11 +5,15 @@
     }
     li{
         
-        padding-top: 25px ;
+        padding: 30px;
         padding-left: 45px ;
-        padding-bottom: 10px;
+        padding-bottom: 20px;
         list-style: none;
     }
+
+    border: white 2.5px solid;
+
+
 }
 .container__menu-bar {
     display: flex;
