--- a/src/app/components/small-card/small-card.component.scss
+++ b/src/app/components/small-card/small-card.component.scss
@@ -1,15 +1,18 @@
 .container__small-card {
-    width: 750px;
+    width: 650px;
     display: flex;
     flex-direction: row;
     align-items: stretch;
 
     margin-bottom: 9px;
-    padding-bottom: 9px;
-    margin-right: 150px;
-    margin-left: 100px;
+    margin: 30px;
+    margin-right: 20px;
+    margin-left: 20px;
 
-    border-bottom: rgb(55, 55, 55) solid 1px;
+    padding-bottom: 20px;
+    padding: 10px;
+
+    border: white solid 2.5px;
 }
 
 .container_small-card__content {
@@ -19,9 +22,11 @@
 
 .small-card__picture {
     img {
-        width: 300px;
-        min-height: 50%;
-
+        width: 210px;
+        height: 210px;
+        margin-right: 15px;
+    
+        border-radius: 2px;
     }
 }
 
@@ -31,24 +36,26 @@
         flex-direction: row;
         justify-content: start;
 
-        font-size: 20px;
+        font-size: 15px;
         padding: 7px;
         margin-top: 5px;
 
-        color: rgb(224, 215, 215) !important; 
+        color: rgb(224, 215, 215) !important;
     }
-    
-    p{
+
+    p {
         display: flex;
         flex-direction: row;
         align-items: flex-start;
-        
+
         padding: 7px;
-        margin-top: 7px;
-        
-        font-size: 14px;
-        color: #969fa3 !important;
+        margin-bottom: 15px;
+
+        font-family:  Calibri, sans-serif;
+
+        font-size: 15px;
+        text-align: justify;
+        color: #b3bfc5 !important;
     }
 
 }
-
